--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=920986bfc50bd470b78af7427f7e3a8a
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a MySQL database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL="mysql://ubuntu:Asterisk04@localhost:3306/rest?serverVersion=5.7"
+DATABASE_URL="mysql://root:secret@mysql8-service:3306/rest?serverVersion=8"
 ###< doctrine/doctrine-bundle ###
